<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:visibility="gone">

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/phonenumber"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:gravity="center_vertical"
        android:text="@string/gender"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/et_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:gravity="center_vertical"
        android:text="@string/dob"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/et_passwrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_cnfrm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/cnfrmpass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/chk_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/acceptterms" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_signinback"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/resgister"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</LinearLayout>