<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/lay_signin"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/et_email_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/et_pass_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/txt_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signinback"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txt_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="10dp"
        android:text="@string/forgotpassword" />

</LinearLayout>