<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="deal.com.lb.view.activities.ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@drawable/black_line"
        android:padding="10dp"
        android:text="@string/forgotpassword1"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/et_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/validate"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/txt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_signinback"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</LinearLayout>
