<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="deal.com.lb.view.activities.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <EditText
        android:id="@+id/et_pricefrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/pricefrom"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_priceto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_edit_back"
        android:hint="@string/priceto"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="Sort By"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txt_sortby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_edit_back"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="@string/newest"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_signinback"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />

</LinearLayout>
