<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:background="@android:color/white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/enternum"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />


    <EditText
        android:id="@+id/edit_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="@android:color/white"
        android:hint="@string/phonenumber"
        android:inputType="number"
        android:maxLength="10"
        android:padding="15dp"
        android:singleLine="true"
        android:textColor="@android:color/black" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/edit_no"
        android:background="@color/line" />

    <TextView
        android:id="@+id/btn_addcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:padding="15dp"
        android:text="@string/ok"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

</RelativeLayout>